--- a/index.htm
+++ b/index.htm
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Tacos Js</title>
 </head>
 <body>
-    <h1>Tacos Js</h1>
+    <h1>Tacos js</h1>
 
+    <h2>Lista de Tacos</h2>
     <div id="taquitos-container"></div>
 
     <br>
@@ -15,7 +17,7 @@
     <h2>Agregar Taco</h2>
     <div id="taco-form">
         <div>
-            Nombre del taco: <input type="text" name="" id="taco-name"/>
+            Nombre del Taco: <input type="text" name="" id="taco-name"/>
         </div>
         <div>
             Cantidad: <input type="number" name="" id="taco-quantity"/>
@@ -27,17 +29,18 @@
                 <option value="no">No</option>
             </select>
         </div>
-        <button id="btn-post-taco">Crear taco</button>
+        <button id="btn-post-taco">Crear Taco</button>
     </div>
 
     <br>
-    <h2>Actualizar taco</h2>
+    <h2>Actualizar Taco</h2>
     <div>
-        Nombre del taco:<label for="taco-option"></label>
+        Nombre del Taco:<label for="taco-option"></label>
         <select id="taco-option" name="taco-option"></select>
+        
         <div id="taco-form">
             <div>
-                Nuevo nombre del taco: <input type="text" name="" id="taco-name-update"/>
+                Nuevo Nombre del Taco: <input type="text" name="" id="taco-name-update"/>
             </div>
             <div>
                 Cantidad: <input type="number" name="" id="taco-quantity-update"/>
@@ -49,7 +52,7 @@
                     <option value="no">No</option>
                 </select>
             </div>
-            <button id="btn-update-taco">Crear taco</button>
+            <button id="btn-update-taco">Guardar Cambios</button>
         </div>
     </div>
 </body>
